# 100-days-of-code

./: README.md  rules.md
agent_watcher/: .gitignore  README.md  TAURI_LEARNING.md  metadata.json  package-lock.json  package.json  server.ts
agent_watcher/src/: App.tsx  index.css  types.ts
agent_watcher/src-tauri/: Cargo.toml  tauri.conf.json
agent_watcher/src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs
agent_watcher/src-tauri/src/operate_file/: mod.rs  operate_file.rs  operate_md.rs
agent_watcher/src/components/: ConfigPage.tsx  SettingsPage.tsx  Sidebar.tsx  UnsavedConfirmModal.tsx
original_docs/: plan.md
rust-perceptron/: .gitignore  Cargo.toml
rust-perceptron/src/: data.rs  filer_csv.rs  main.rs  perceptron.rs
rust-tool/git-activity/: Cargo.toml
rust-tool/git-activity/src/: git.rs  main.rs  read_log.rs
vs-c++/PomodoroTimer/: PomodoroTimer.sln
vs-c++/PomodoroTimer/PomodoroTimer/: PomodoroTimer.cpp  PomodoroTimer.h  PomodoroTimer.rc  PomodoroTimer.vcxproj  PomodoroTimer.vcxproj.filters  PomodoroTimerDlg.cpp  PomodoroTimerDlg.h  resource.h
vs-c++/PomodoroTimer/PomodoroTimer/res/: PomodoroTimer.rc2
