[package]
name = "agent-config-watcher"
version = "0.1.0"
description = "Agent Config Watcher"
authors = ["Agent Config Watcher"]
edition = "2021"

[lib]
name = "agent_config_watcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
dirs = "6"
